# Cpp-final-project

./: CMakeLists.txt  README.md  main.cpp
src/: watershedsegmenter.h  widget.cpp  widget.h  widget.ui
src/ui/: widget.cpp  widget.h  widget.ui
